Updated Product Section

--- a/src/globalStyles.css
+++ b/src/globalStyles.css
@@ -25,6 +25,7 @@
     --font-megante: megante;
     --font-saudagar: saudagar;
     --font-bugetaDream: bugetaDream;
+    --breakpoint-xs: 30rem;
 }
 
 @keyframes marquee {
